Sun Sep 29 04:26:52 1991  Per Cederqvist  (ceder at ruben)

	* flags.el (lyskom-read-options-2): Run lyskom-login-hook even if
	  the person has no userarea.

	* vars.el (kom-show-personal-message-in-buffer,
	  kom-pop-personal-message, kom-ding-on-personal-messages,
	  lyskom-personal-messages-hook): added.

	* async.el (lyskom-insert-personal-message): Beeps only if
	  kom-ding-on-personal-messages is non-nil.

	* async.el (lyskom-insert-personal-message): Pops to the buffer if
	  kom-pop-personal-message is set.

	* async.el (lyskom-insert-personal-message): Created. Does the
	  acual job that lyskom-show-personal-message used to do.

	* async.el (lyskom-show-personal-message): Run
	  lyskom-personal-message-hook when a message arrives.

	* async.el (lyskom-show-personal-message): Insert the message in
	  the normal buffer, or a special buffer, or not at all depending
	  on how kom-show-personal-messages-in-buffer is set.

Sat Sep 28 21:33:38 1991  Per Cederqvist  (ceder at ruben)

	* async.el (lyskom-parse-async): Removed the "info" backdoor.

Tue Sep 17 18:44:08 1991  Linus Tolke Y  (linus at lysator)

	* lyskom-rest.el, prioritize.el (lyskom-start-of-command): Nu
	  konverterar vi {ven error-meddelanden bl.a. V{nta p} prompten.
	  Ny funktion: lyskom-error.		     

Mon Sep 16 18:10:59 1991  Linus Tolke Y  (linus at lysator)

	* Distribuerat version 0.34.1		22:00

	* lyskom-rest.el (kom-view-next-text): Lagt till ett anrop som
	  t|mmer lyskom-to-do-list ocks} n}r man l{ser. ]terse markerade
	  buggen berodde av detta.

	* clienttypes.el (read-list-delete-text): Justerat doc-str{ngen.

	* prioritize.el (lyskom-prioritize-1,lyskom-prioritize-2): Fixat
	  s} att ledtexterna l{ggs in med lyskom-insert (blir
	  iso->swascii-konverterade.

	* edit-text.el (lyskom-edit-read-misc-list): Buggfix. Det jag
	  gjorde ig}r. Nu funkar det att l{gga in texter ocks}.

Sun Sep 15 18:17:11 1991  Linus Tolke Y  (linus at robin)
